force-app/main/default/objects/Trail__c/Trail__c.object-meta.xml
<CustomObject>
    <description>Describe trail information for a park.</description>
    <label>Trail</label>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>