force-app/main/default/objects/Trail__c/fields/Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection_Date__c</fullName>
    <description>Trail&apos;s last inspection date.</description>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>